Checkbox labels should no longer arbitrarily break on white space

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -302,7 +302,7 @@ textarea:focus.warning-input  {
   border-radius: 4px 0 4px 0;
 }
 
-.download-container .checkbox {
+.download-container .checkbox, .sheet-container .checkbox, .sheet-container .radio {
   padding: 6px 10px 6px 25px;
   font-size: 13px;
   line-height: 18px;
@@ -312,9 +312,10 @@ textarea:focus.warning-input  {
   -moz-border-radius: 3px;
   border-radius: 3px;
   cursor: pointer;
+  white-space: nowrap;
 }
 
-.download-container .checkbox:hover {
+.download-container .checkbox:hover, .sheet-container .checkbox:hover, .sheet-container .radio:hover {
   color: #333;
   background-color: #f5f5f5;
 }
